fix: gap catalog (media 890px)

--- a/blocks/catalog/catalog.css
+++ b/blocks/catalog/catalog.css
@@ -18,7 +18,6 @@
   .catalog {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(2, 361px);
-    gap: 17px;
     padding-top: 22px;
     column-gap: 17px;
     row-gap: 20px;
